学堂-分类-边框色值。线下课-专辑-边框色值修改，去掉点击收起效果。

--- a/wechat/src/main/webapp/xcview/css/amend.css
+++ b/wechat/src/main/webapp/xcview/css/amend.css
@@ -87,7 +87,7 @@ header {
 	line-height: 0.97rem;
 	margin: 0 auto;
 	/*background: #ddd;*/
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .enter_one .img0{
 	width: 0.25rem;
