--- a/wechat/src/main/webapp/xcview/css/course_outline.css
+++ b/wechat/src/main/webapp/xcview/css/course_outline.css
@@ -101,7 +101,7 @@ header {
 }
 .outline_cen_border{
 	width: 100%;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .outline_list{
 	width: 15.45rem;
