--- a/wechat/src/main/webapp/xcview/css/help.css
+++ b/wechat/src/main/webapp/xcview/css/help.css
@@ -86,7 +86,7 @@ header {
 	line-height: 0.97rem;
 	font-size: 0.32rem;
 	color: #333333;
-	border-bottom: 1px solid #D8DDE6; 
+	border-bottom: 1px solid #f0f0f0; 
 	
 	overflow: hidden;
 }
