--- a/wechat/src/main/webapp/xcview/css/search.css
+++ b/wechat/src/main/webapp/xcview/css/search.css
@@ -170,7 +170,7 @@ header{
 }
 .search_history_list_one{
 	/*padding: 0.426rem 0;*/
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #F0F0F0;
     height: 1.702rem;
     line-height: 1.702rem;
 }
