--- a/wechat/src/main/webapp/xcview/css/feedback.css
+++ b/wechat/src/main/webapp/xcview/css/feedback.css
@@ -82,8 +82,8 @@ header {
 .feedback{
 	width: 100%;
 	height: 3.02rem;
-	border-top: 1px solid #D8DDE6;
-	border-bottom: 1px solid #D8DDE6;
+	border-top: 1px solid #f0f0f0;
+	border-bottom: 1px solid #f0f0f0;
 	margin-top: 1.08rem;
 	background: #fff;
 }
