--- a/wechat/src/main/webapp/xcview/css/lickacc_mobile.css
+++ b/wechat/src/main/webapp/xcview/css/lickacc_mobile.css
@@ -90,7 +90,7 @@ header {
 }
 .email_one .div0{
 	font-size: 0.28rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 }
 .email_one .div0 .span0{
 	color: #333333;
@@ -171,7 +171,7 @@ header {
     height: 0.87rem;
     line-height: 0.87rem;
 	/*text-align: center;*/
-	border-top: 1px solid #D8DDE6;
+	border-top: 1px solid #f0f0f0;
 	position: absolute;
     bottom: 0;
     text-align: center;
@@ -187,6 +187,6 @@ header {
 	text-align: center;
 	float: left;
 	color: #00BC12;
-	border-left: 1px solid #D8DDE6;
+	border-left: 1px solid #f0f0f0;
 }
 
