--- a/wechat/src/main/webapp/xcview/css/my_wallet.css
+++ b/wechat/src/main/webapp/xcview/css/my_wallet.css
@@ -127,13 +127,13 @@ header{
 	width: 100%;
 	height: 1rem;
     line-height: 0.5rem;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #F0F0F0;
 	overflow: hidden;
 	padding-bottom: 0.2rem;
     margin-top: 0.2rem;
 }
 .record_course:last-child{
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #F0F0F0;
 	padding-bottom1: 0rem;
 }
 .record_course_left .span0{
