--- a/wechat/src/main/webapp/xcview/css/my_study.css
+++ b/wechat/src/main/webapp/xcview/css/my_study.css
@@ -88,7 +88,7 @@ img{display: block;}
 }
 .play_list ul li{
 	padding: 0.2rem 0;
-	border-bottom: 1px solid #D8DDE6;
+	border-bottom: 1px solid #f0f0f0;
 	overflow: hidden;
 }
 .play_list ul li p{
@@ -141,7 +141,7 @@ text-align: right;
 .history_modal p{
 	font-size: 0.32rem;
     padding: 0.6rem 0 0.43rem;
-    border-bottom: 0.01rem solid #D8DDE6;
+    border-bottom: 0.01rem solid #f0f0f0;
 }
 .history_modal ul li{
 	text-align: center;
@@ -149,7 +149,7 @@ text-align: right;
 }
 .history_modal ul li:nth-child(1){
 	width: 2.4rem;
-	border-right: 0.01rem solid #D8DDE6;
+	border-right: 0.01rem solid #f0f0f0;
 	float: left;
 }
 .history_modal ul li:nth-child(2){
@@ -175,7 +175,7 @@ text-align: right;
 	    width: 100%;
     padding: 0.2rem 0.26rem 0.2rem 0;
     box-sizing: border-box;
-	border-bottom: 0.01rem solid #D8DDE6;
+	border-bottom: 0.01rem solid #f0f0f0;
 	    overflow: hidden;
     
 }
