学堂-发现-学习-我的。学堂课程-课程-专辑-线下课-筛选列表。微信浏览器上控制750分辨率

--- a/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/inherited_introduction.css
@@ -29,8 +29,9 @@ header{
 	background-size: 100% 100%; */
 }
 .intro{
-	width: 100%;
+	width: 7.5rem;
 	height: 0.88rem;
+	margin: 0 auto;
 }
 .special_img{
 	width: 100%;
