--- a/wechat/src/main/webapp/xcview/css/my_study.css
+++ b/wechat/src/main/webapp/xcview/css/my_study.css
@@ -322,12 +322,12 @@ color: #BBBBBB;
 }
 /*底部开始*/
 .footer_perch{
-	width: 100%;
+	width: 7.5rem;
 	height:1rem;
 	/*background: red;*/
 }
 .footer{
-	width: 100%;
+	width: 7.5rem;
 	height: 1rem;
 	background: #fff;
 	/*background: red;*/
