--- a/wechat/src/main/webapp/xcview/css/all_comment.css
+++ b/wechat/src/main/webapp/xcview/css/all_comment.css
@@ -120,7 +120,7 @@ margin-top: 0.1rem;
 .user_header img{
 	width: 100%;
 	height: 100%;
-	border-radius: 50px;
+	border-radius: 100px;
 }
 .user_text{
 	width: 5.85rem;
@@ -239,7 +239,7 @@ color: #666666;
 }
 /*底下评论输入框*/
 .wrap_user_input{
-	width: 100%;
+	width: 7.5rem;
 	background: white;
 	height: 0.98rem;
 	padding: 0.01rem 0.26rem 0 0.26rem;
@@ -247,8 +247,9 @@ color: #666666;
 	box-sizing: border-box;
 	position: fixed;
 	bottom: 0;
-	left: 0;
+	left: 50%;
 	z-index: 9;
+	margin-left: -3.75rem;
 }
 .wrap_input{
 	width: 100%;
@@ -303,7 +304,8 @@ color: #666666;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	left: 50%;
+	margin-left: -3.75rem;
 	z-index: 10;
 	padding: 0.3rem 0.26rem 0.6rem;
 	
@@ -323,12 +325,12 @@ color: #666666;
 	width: 7.5rem;
     /*position: absolute;*/
    position: fixed;
-
 	display: none;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	left: 50%;
+	margin-left: -3.75rem;
 	z-index: 10;
 	padding: 0.3rem 0.26rem 0.3rem;
 	
