--- a/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apprentice.css
@@ -31,17 +31,19 @@ header{
 	z-index: 1;
 }
 .apprentice_title{
-	width: 100%;
-	height: 0.88rem;
-	background: #fff;
-	line-height: 0.88rem;
-	font-size: 0.36rem;
-	color: #333333;
-	text-align: center;
-	position: fixed;
-	top: 0;
-	z-index: 1;
-	border-bottom: 1px solid #d8dde6;
+	width: 7.5rem;
+    height: 0.88rem;
+    background: #fff;
+    line-height: 0.88rem;
+    font-size: 0.36rem;
+    color: #333333;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    left: 50%;
+    margin-left: -3.75rem;
+    border-bottom: 1px solid #d8dde6;
 }
 /*师承头部结束*/
 
@@ -52,19 +54,16 @@ header{
 	opacity: 0;
 }
 .main{
-	width: 100%;
-	/*background: #fff;*/
-	position: relative;
+	width: 7.5rem;
+    /* background: #fff; */
+    position: relative;
     top: 0rem;
     overflow: scroll;
     height: 100%;
-	-webkit-overflow-scrolling1:touch;
-
-	overflow-x: hidden;
-/ overflow-y: auto; /
-touch-action: pan-y;
--webkit-overflow-scrolling: touch;
-
+    -webkit-overflow-scrolling1: touch;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    margin: 0 auto;
 }
 .center{
 	width: 100%;
@@ -108,13 +107,15 @@ touch-action: pan-y;
 	/*background: red;*/
 }
 .footer{
-	width: 100%;
-	height: 1rem;
-	background: #fff;
-	/*background: red;*/
-	position: fixed;
-	bottom: 0;
-	border-top: 1px solid #d8dde6;
+	width: 7.5rem;
+    height: 1rem;
+    background: #fff;
+    /* background: red; */
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid #d8dde6;
+    left: 50%;
+    margin-left: -3.75rem;
 }
 .footer ul li{
 	width: 25%;
