--- a/wechat/src/main/webapp/xcview/css/curriculum_table.css
+++ b/wechat/src/main/webapp/xcview/css/curriculum_table.css
@@ -93,7 +93,9 @@ body{
      text-align:center*/
 }
  .swipe{
-     padding:70px 0 0 0;
+    padding: 1.4rem 0 0 0;
+    width: 7.5rem;
+    margin: 0 auto;
 }
 
 /*滑动结束*/
@@ -118,21 +120,32 @@ a{
 
 /*头部开始*/
 header{
-	width: 100%;
+	width: 7.5rem;
     height: 0.88rem;
     background: #fff;
     position: fixed;
     top: 0;
     z-index: 10;
+    left: 50%;
+    margin-left: -3.75rem;
 }
 .top_border{
-	width: 100%;
+	/* width: 100%;
+        height: 0.9rem;
+        background: #fff;
+        top: 0.88rem;
+        position: fixed;
+        z-index: 99;
+        border-bottom: 1px solid #f0f0f0; */
+    width: 7.5rem;
     height: 0.9rem;
     background: #fff;
     top: 0.88rem;
     position: fixed;
     z-index: 99;
     border-bottom: 1px solid #f0f0f0;
+    left: 50%;
+    margin-left: -3.75rem;
 }
 .header{
 	width: 100%;
@@ -204,9 +217,10 @@ header{
     /*background: yellowgreen;*/
     float: right;
     position: fixed;
-    right: 0;
+    /* right: 0; */
     top: 0.88rem;
     z-index: 9999;
+    margin-left: 6.2rem;
 }
 .screen_size .img0 {
     width: 0.02rem;
@@ -367,21 +381,21 @@ header{
 
 /*筛选条件*/
 .hint{
-	font-size: 0.24rem;
+    width: 7.5rem;
+    height: 0.8rem;
+    line-height: 0.8rem;
+    font-size: 0.24rem;
     color: #000000;
     text-align: center;
-    width: 100%;
     background: #fff;
     position: fixed;
     top: 1.8rem;
-    left: 0;
-    height: 0.8rem;
-    line-height: 0.8rem;
+    left: 50%;
+    margin-left: -3.75rem;
     z-index: 1;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    width: 100%;
 }
 .hint span{
 	font-size: 0.24rem;
@@ -398,14 +412,15 @@ header{
 }
 
 .btn_show_bg{
-	width: 100%;
-	height: 100%;
-	background: #000;
-	position: fixed;
-	top: 0;
-	left: 0;
-	opacity: 0.5;
-	z-index: 99;
+	width: 7.5rem;
+    height: 100%;
+    background: #000;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    opacity: 0.5;
+    z-index: 99;
+    margin-left: -3.75rem;
 }
 .btn_show_main{
 	width: 5.06rem;
