--- a/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
+++ b/wechat/src/main/webapp/xcview/css/home_pages/home_pages.css
@@ -85,13 +85,19 @@
 		padding-bottom: 0;
 	}
 	/*新滑动添加*/
+    #slider1{
+        width: 7.5rem;
+        margin: 0  auto;
+    }
 .find_nav {
-    width: 100%;
+    width: 7.5rem;
     height: 0.8rem;
     line-height: 0.8rem;
     background-color: #fff;
     position: fixed;
     top: 0.88rem;
+    left: 50%;
+    margin-left: -3.75rem;
     z-index: 9999999999;
     border-bottom: 1px solid #d8dde6;
     display: -moz-box;
