--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -548,7 +548,7 @@ overflow: hidden;
 .user_header img{
 	width: 100%;
 	height: 100%;
-	border-radius: 50px;
+	border-radius: 100px;
 }
 .user_text{
 	width: 5.85rem;
@@ -676,16 +676,17 @@ color: #666666;
 }
 /*底下评论输入框*/
 .wrap_user_input{
-	width: 100%;
-	background: white;
-	height: 0.98rem;
-	padding: 0.01rem 0.26rem 0 0.26rem;
-	margin-top: 0.2rem;
-	box-sizing: border-box;
-	position: fixed;
+	width: 7.5rem;
+    background: white;
+    height: 0.98rem;
+    padding: 0.01rem 0.26rem 0 0.26rem;
+    margin-top: 0.2rem;
+    box-sizing: border-box;
+    border-top: 1px solid #d8dde6;
+    position: fixed;
     bottom: 0;
-    left: 0;
-    border-top: 1px solid #f0f0f0;
+    left: 50%;
+    margin-left: -3.75rem;
 }
 .wrap_input{
 	width: 7rem;
@@ -741,7 +742,8 @@ color: #666666;
     background: white;
     box-sizing: border-box;
     bottom: 0;
-    left: 0;
+    left: 50%;
+    margin-left: -3.75rem;
     z-index: 5;
     padding: 0.3rem 0.26rem 0.6rem;
 }
@@ -763,7 +765,8 @@ color: #666666;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	left: 50%;
+	margin-left: -3.75rem;
 	z-index: 9999;
 	padding: 0.3rem 0.26rem 0.3rem;
 	
