--- a/wechat/src/main/webapp/xcview/css/live_select_aibum.css
+++ b/wechat/src/main/webapp/xcview/css/live_select_aibum.css
@@ -569,7 +569,7 @@ margin-top: 0.1rem;
 .user_header img{
 	width: 100%;
 	height: 100%;
-	border-radius: 50px;
+	border-radius: 100px;
 }
 .user_text{
 	width: 5.85rem;
@@ -688,16 +688,17 @@ color: #666666;
 }
 /*底下评论输入框*/
 .wrap_user_input{
-	width: 100%;
-	background: white;
-	height: 0.98rem;
-	padding: 0.01rem 0.26rem 0 0.26rem;
-	margin-top: 0.2rem;
-	box-sizing: border-box;
-	position: fixed;
+	width: 7.5rem;
+    background: white;
+    height: 0.98rem;
+    padding: 0.01rem 0.26rem 0 0.26rem;
+    margin-top: 0.2rem;
+    box-sizing: border-box;
+    position: fixed;
     bottom: 0;
-    left: 0;
+    left: 50%;
     border-top: 1px solid #f0f0f0;
+    margin-left: -3.75rem;
 }
 .wrap_input{
 	width: 7rem;
@@ -754,7 +755,8 @@ color: #666666;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	left: 50%;
+	margin-left: -3.75rem;
 	z-index: 5;
 	padding: 0.3rem 0.26rem 0.6rem;
 	
@@ -777,7 +779,8 @@ color: #666666;
 	background:white;
 	box-sizing: border-box;
 	bottom: 0;
-	left: 0;
+	left: 50;
+	margin-left: -3.75rem;
 	z-index: 5;
 	padding: 0.3rem 0.26rem 0.3rem;
 	
