--- a/wechat/src/main/webapp/xcview/css/school_play.css
+++ b/wechat/src/main/webapp/xcview/css/school_play.css
@@ -587,13 +587,13 @@ color: #666666;
 }
 /*底部购买价格*/
 .bot_price{
-	width: 100%;
-	height: 0.98rem;
-line-height: 0.98rem;
-	
-	position: fixed;
-	left: 0;
-	bottom: 0;
+	width: 7.5rem;
+    height: 0.98rem;
+    line-height: 0.98rem;
+    position: fixed;
+    left: 51%;
+    bottom: 0;
+    margin-left: -3.75rem;
 }
 .left_price{
 background: white;
