师承微信浏览器状态-分辨率控制在750

--- a/wechat/src/main/webapp/xcview/css/apprentice/information_registration.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/information_registration.css
@@ -18,9 +18,10 @@ li{
 	background: blue;
 }
 body{
-    width: 100%;
+    width: 7.5rem;
     height: 100%;
     background: #F5F5F5;
+    margin: 0 auto;
 }
 .both{
 	clear: both;
@@ -41,7 +42,7 @@ placeholder{
 
 /*报名头部开始*/
 header{
-	width: 100%;
+	width: 7.5rem;
 	height: 0.88rem;
 	position: fixed;
 	top: 0;
