--- a/wechat/src/main/webapp/xcview/css/apprentice/apply.css
+++ b/wechat/src/main/webapp/xcview/css/apprentice/apply.css
@@ -41,10 +41,12 @@ placeholder{
 
 /*报名头部开始*/
 header{
-	width: 100%;
+	width: 7.5rem;
 	height: 0.88rem;
 	position: fixed;
 	top: 0;
+	left: 50%;
+	margin-left: -3.75rem;
 	z-index: 1;
 	border-bottom: 1px solid #d8dde6;
 }
@@ -81,9 +83,10 @@ header{
 
 /*中间内容开始*/
 .main{
-	width: 100%;
+	width: 7.5rem;
     height: 100%;
-	background: #F5F5F5;
+    background: #F5F5F5;
+    margin: 0 auto;
 }
 .fiexd{
 	width: 100%;
@@ -91,10 +94,11 @@ header{
 	opacity: 0;
 }
 .main_bg{
-	width: 100%;
-	height: 100%;
-	background: #fff;
-	margin-bottom: 0.2rem;
+	width: 7.5rem;
+    height: 100%;
+    background: #fff;
+    margin: 0 auto;
+    margin-bottom: 0.2rem;
 }
 .name{
 	width: 7.24rem;
@@ -365,23 +369,25 @@ color:#bbb;
 	display: none;
 }
 .popup_bg{
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: #000;
-	opacity: 0.5;
-	z-index: 1;
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 1;
+    margin-left: -3.75rem;
 }
 .popup_sex{
-	width: 100%;
-	height: 2.4rem;
-	background: #fff;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	z-index: 2;
+	width: 7.5rem;
+    height: 2.4rem;
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    z-index: 2;
+    margin-left: -3.75rem;
 }
 .man{
 	width: 100%;
@@ -410,23 +416,25 @@ color:#bbb;
 	display: none;
 }
 .education_background_bg{
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background: #000;
-	opacity: 0.5;
-	z-index: 1;
+	width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    background: #000;
+    opacity: 0.5;
+    z-index: 1;
+    margin-left: -3.75rem;
 }
 .education_background_sex{
-	width: 100%;
-	height: 4.8rem;
-	background: #fff;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	z-index: 2;
+	width: 7.5rem;
+    height: 4.8rem;
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3.75rem;
+    z-index: 1;
 }
 .undergraduate{
 	width: 100%;
