--- a/wechat/src/main/webapp/xcview/css/recharges.css
+++ b/wechat/src/main/webapp/xcview/css/recharges.css
@@ -20,14 +20,15 @@ body{
 
 /*头部开始*/
 header {
-    width: 100%;
+    width: 14.545rem;
     height: 1.872rem;
     line-height: 1.872rem;
     background: #fff;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
     z-index: 9;
+    margin-left: -7.275rem;
 }
 .header {
     width: 14.851rem;
