--- a/wechat/src/main/webapp/xcview/css/lickacc_mobile.css
+++ b/wechat/src/main/webapp/xcview/css/lickacc_mobile.css
@@ -14,14 +14,19 @@ a{
 .both{
 	clear: both;
 }
+body{
+    width: 7.5rem;
+    margin: 0 auto;
+}
 header {
-    width: 100%;
+    width: 7.5rem;
     height: 0.88rem;
     line-height: 0.88rem;
     background: #fff;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 50%;
+    margin-left: -3.75rem;
     z-index: 9;
     border-bottom: 1px solid #D8DDE6;
 }
