--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -135,6 +135,12 @@ padding-bottom: 10px;
 .immediately-buy a{
 	color: white;
 }
+.right-details .remember-last{
+	position: absolute;
+color: #999999;
+    left: 200px;
+    bottom: 10px;
+}
 /*详情/评价/常见问题*/
 /*选集*/
 .wrap-anthology{
@@ -236,7 +242,7 @@ padding-bottom: 10px;
 	line-height: 1;
 	font-size: 20px;
 }
-.author-introduce img{
+.author-content img{
 	max-width: 820px;	
 }
 .author-content{
