--- a/wechat/src/main/webapp/xcview/css/curriculum_table.css
+++ b/wechat/src/main/webapp/xcview/css/curriculum_table.css
@@ -91,6 +91,7 @@ body{
      font-size:55px;
      line-height:300px;
      text-align:center*/
+     display: block;
 }
  .swipe{
     padding: 1.4rem 0 0 0;
