--- a/online-web/src/main/webapp/web/css/school/school-video.css
+++ b/online-web/src/main/webapp/web/css/school/school-video.css
@@ -107,7 +107,7 @@ a:active{text-decoration:none;}/* 指正在点的链接*/
 	color: #333333;
 }
 .wrap-title p img{
-	margin: -3px 0 0 10px;
+	margin: -3px 0 0 0;
 	transform: scale(.8);
 }
 
