--- a/online-web/src/main/webapp/web/css/school/details-album.css
+++ b/online-web/src/main/webapp/web/css/school/details-album.css
@@ -61,6 +61,13 @@ padding-bottom: 10px;
 	float: left;
 	color: #999999;
 }
+.right-details .author-inf li a{
+	color: #999999;
+	}
+.right-details .author-inf li a:hover{
+	color: #00bc12;
+}
+	
 .right-details .author-inf li img{
 	width: 120px;
 	display: block;
